added  api endpoint to serve the possible APs and template types and updated docs
